--- a/accommodations.qmd
+++ b/accommodations.qmd
@@ -16,6 +16,7 @@ We have a room block reserved here for the night of the wedding, Saturday July 1
 - Rooms start at $289/night
 - Check-in: **4 pm** <br> <span style="color:red;">Please note the wedding ceremony is at **4 pm** and shuttle pick-up is at **2 pm**. We encourage you to check-in after the wedding or call the day-of to request an early check-in. The hotel can store your luggage if there are no rooms ready early.</span>
 - 1-minute walk to the after party!
+- [**Book here**](https://reservations.verticalbooking.com//premium/index2.html?tot_camere=1&tot_adulti=1&tot_bambini=0&gg=19&mm=7&aa=2025&ggf=20&mmf=7&aaf=2025&notti_1=1&lingua_int=usa&id_albergo=16825&dc=4028&adulti1=1&bambini1=0&generic_codice=Mcrazeroomblock&codice_roomlist=Mcrazeroomblock)
 
 ### [Holiday Inn Express & Suites Hood River](https://www.ihg.com/holidayinnexpress/hotels/us/en/hood-river/pdxhd/hoteldetail)
 
@@ -28,6 +29,7 @@ We have a room block reserved here for a two-night minimum, July 18--July 20, 20
 - Rooms start at $269/night
 - Check-in: **4 pm**
 - 1.2 miles from the after party
+- *We are awaiting booking details*
 
 ### Other options
 
