--- a/things_to_do.qmd
+++ b/things_to_do.qmd
@@ -4,3 +4,209 @@ toc: true
 ---
 
 *Check back soon for an opinionated guide to eating, drinking, and roaming through Kyle's neck of the woods.*
+
+Start with an interactive map of Oregon and SW Washington
+
+- Highlight Portland, Hood River, and the Gorge
+- Might be useful to have different layers for different interests
+    - Hiking/sightseeing
+    - Extreme sports
+    - Golf
+    - Beer
+    - Wine
+- Portland needs its own set of maps for streets and restaurants
+    - Show what's transit accessible
+- Historic Columbia River Highway map
+- Broader Gorge Hiking map?
+- Oregon bigger than New England map
+
+
+
+### Portland
+
+#### The "don't miss" list
+
+Washington Park
+
+- Rose Garden
+- Japanese Garden
+- The view from Pittock Mansion
+
+#### Hotels
+
+Heathman
+
+Benson
+
+Hotel DeLuxe
+
+#### Eating and drinking through Portland
+
+Getting around
+
+- MAX
+- Streetcar
+- Bike
+
+The "quadrants"; the eastside/westside dichotomy
+
+N/NE Alberta
+
+N Mississippi/Williams
+
+SE Hawthorne/Division
+
+NE 28th
+
+NW 23rd
+
+Central Eastside
+
+Old Town/Chinatown
+
+Downtown
+
+- Pioneer Square
+- Shopping
+
+Pearl district
+
+- Powell's
+- Shopping
+
+Washington Park and Forest Park
+
+- Rose Garden
+- Japanese Garden
+- The view from Pittock Mansion
+
+#### Rose Garden
+
+#### Japanese Garden
+
+
+#### Hikes
+
+#### Eating and drinking
+
+Barbeque
+
+- Eem
+- Matt's BBQ
+
+Thai
+
+- Eem
+- Langbaan
+
+Vietnamese
+
+- Pho Van
+
+Japanese
+
+- Bamboo Sushi
+- Afuri
+- Tanaka
+
+New American
+
+- Sugarpine Drive-in
+- Edgefield
+
+Southern
+
+- Screen Door
+
+Breakfast
+
+- Pine State Biscuits
+- Broder
+
+Pizza
+
+- Ken's Artisan Pizza
+- Apizza Scholls
+
+Steakhouses
+
+- RingSide
+- Ox
+- Laurelhurst Market
+
+Seafood
+
+- Jake's Crawfish
+- Normandie
+- Jacqueline's
+
+Slavic
+
+- Kachka
+
+Haitian
+
+- kann
+
+Mexican
+
+- Lilia Comedor
+- Republica
+- Guero
+- Mole Mole
+
+Chinese
+
+- ???
+
+
+### Columbia River Gorge
+
+#### Hikes
+
+#### Eating and drinking
+
+### Beyond Portland and the Gorge
+
+#### Oregon Coast
+
+North Coast: Astoria, Seaside, Cannon Beach
+
+Yachats
+
+Oregon Dunes
+
+#### Central Oregon
+
+Bend
+
+- Breweries
+    - Crux
+    - Monkless
+- Deschutes River
+
+South Sister
+
+Smith Rock
+
+#### Eugene
+
+(Mostly for origin trivia)
+
+The Whit
+
+Spencer's Butte
+
+The University
+
+- PLC, where it all started
+- Hayward Field
+
+
+
+#### Willamette Valley
+
+Silver Falls
+
+Wine Country
+
