--- a/accommodations.qmd
+++ b/accommodations.qmd
@@ -39,13 +39,11 @@ Please note the wedding ceremony is at **4 pm** and shuttle pick-up is at **3 pm
 
 ### Other options
 
-[Lightwell Hotel and Spa](https://lightwellhotel.com/): New hotel! We will have more information here in the Spring.
-
 [Hampton Inn and Suites](https://www.hilton.com/en/hotels/pdxhrhx-hampton-suites-hood-river/): Two-night minimum, starting at $335/night. 
 
 [Best Western Plus Hood River Inn](https://www.bestwestern.com/en_US/book/hotel-rooms.38121.html): These rooms open to the general public 60 days before the stay (e.g., May 19, 2025). Until then the rooms are reserved for guests who have events at the hotel. 
 
-[Society Hotel Bingen](https://thesocietyhotel.com/bingen/): This is a fantastic hotel and spa! They have a variety of [rooms](https://secure.webrez.com/hotel/2510/calendar): cabins, bunks, rooms with patios. The spa and bathhouse is amazing! It is on the Washington state side of the Columbia river. Slightly less convenient to get to the wedding but a great hotel nonetheless!
+[Society Hotel Bingen](https://thesocietyhotel.com/bingen/): We love this hotel and spa! They have a variety of [rooms](https://secure.webrez.com/hotel/2510/calendar): cabins, bunks, rooms with patios. The spa and bathhouse are amazing! It is on the Washington state side of the Columbia river. Slightly less convenient to get to the wedding but a great hotel nonetheless!
 
 AirBnb, VRBO, and Booking.com all have houses available to rent in the area. We would recommend staying in Hood River for convenience. White Salmon, WA also has great options and is cheaper. You will need to drive across the [Hood River Bridge](https://www.portofhoodriver.com/hood-river-bridge) to get to the Oregon side. There is $3.50 toll each way. 
 
