--- a/faq.qmd
+++ b/faq.qmd
@@ -3,7 +3,6 @@ title: "Frequently asked questions"
 toc: true
 ---
 
-*A work in progress* 
 
 ### Can I bring my children to the wedding?
 
@@ -11,9 +10,9 @@ Do you have a tiny little baby? Under 1 year old? Please bring the baby if you'd
 
 Due to the limited capacity of the venue we are unable to accommodate older children at our event. 
 
-For out of town guests, we are considering multiple options for childcare. If you are interested in this, please email us! [siobhankyle2016@gmail.com](mailto:siobhankyle2016@gmail.com)
+For out of town guests, we have hired a babysitter! She is lovely and she is also a kindergarten teacher! Her name is Maddie. She would love to watch your child while you enjoy the ceremony and eat your dinner and longer if needed. Please [email us](mailto:siobhankyle2016@gmail.com) ([siobhankyle2016@gmail.com](mailto:siobhankyle2016@gmail.com)) if you are interested in this!
 
-### Can I bring a guest or plus one?
+### Can I bring a guest or plus-one?
 
 Due to limited event space, only the adults listed on the invitation will be able to attend.
 
@@ -29,24 +28,22 @@ There is another venue called The Orchard nearby. We are not getting married the
 
 ### What is the dress code?
 
-Semi-formal. Color recommended! Do you have a linen suit you've always wanted to wear? Now's the time. No ties are necessary, at the groom's request. 
+Semi-formal. Color recommended! Do you have a linen or seersucker suit you've always wanted to wear? Now's the time. No ties are necessary, at the groom's request. 
 
 Please avoid colors traditionally reserved for the bride, like white and ivory. 
 
 ### Where can I park?
 
-There is ample parking at the venue. You cannot park there overnight.
+There is ample parking at the venue. When you take the turn off of Trout Creek road toward the venue, keep going past the left turn that would take you into the venue and head to the big parking lot and park there!
 
-If you would like to take the shuttle from Hood River, please park at the Holiday Inn Express & Suites Hood River. 
 
 ### How can I get to the wedding?
 
-If you are staying at either of the hotels we have a room block at, a shuttle will pick you up. 
+If you are staying at either of the hotels we have a room block at, a shuttle will pick you up if you like. You can also, of course, drive from wherever you are coming from!
 
-You can also head to either of the shuttle pick up spots. Parking is easier at the Holiday Inn, but the Hood River Hotel is more centrally located in downtown Hood River. 
 
 ### What time should I arrive to the wedding?
 
 Doors open at 3 pm and the bar will be open. Come and enjoy a cocktail with the bride and groom before the ceremony!
 
-The ceremony will begin promptly at 4 pm.
+The ceremony will begin promptly at 4pm.
