--- a/schedule.qmd
+++ b/schedule.qmd
@@ -3,30 +3,30 @@ title: "Schedule"
 toc: false
 ---
 
-*A work in progress* 
-
-### Welcome event, Friday, July 18, 2025
+### Welcome picnic, Friday, July 18, 2025
 
 #### Hood River, OR
 
-- *Stay tuned for the exact time and place*
+- We are hosting a casual picnic with snacks and drinks from 2 to 5pm at the [Marina Park Picnic Shelter](https://www.portofhoodriver.com/marina-park-picnic-shelter-4e397c8). 
+- We have the shelter reserved all day (9am-7pm) for those who'd like to spend the day on the river. We see ourselves paddleboarding. Join us!
+
 
 ### Wedding Day! Saturday, July 19, 2025
 
 #### Hood River, OR
 
-- ~2:30 pm: Shuttle pick up at hotels, *details to come*. ~25 minute car ride
+- Around 3pm: Shuttle pick up at hotels, *details to come*. Expect a 25-minute drive to the venue.
 
 #### Mt. View Orchards, Mt. Hood, OR
 
-- 3 pm: Welcome Drinks with the bride and groom
-- 4 pm: Ceremony
-- 4:30 pm: Cocktail Hour
-- 5:30 pm: Dinner and Toasts
-- 6:30 pm: Dance floor opens!
-- 8 pm: Last call for drinks 
-- 9 pm: Sunset and Departure
+- 3pm: Welcome drinks with the bride and groom
+- 4pm: Ceremony
+- 4:30pm: Cocktail hour
+- 5:15pm: Dinner and toasts
+- 6:30pm: Dance floor opens!
+- 8pm: Last call for drinks 
+- 9pm: Sunset and departure
 
 #### Hood River, OR
 
-- 9:30 pm: After Party
+- 9:30pm: After-party at Oak Street Pub!!
