--- a/things_to_do.qmd
+++ b/things_to_do.qmd
@@ -3,24 +3,53 @@ title: "Things to do"
 toc: true
 ---
 
-*Check back soon for an opinionated guide to eating, drinking, and roaming through Kyle's neck of the woods.*
+### Hood River and the Columbia River Gorge
+
+Hood River is a noted kiteboarding destination nestled between Mt. Hood and Mt. Adams in the Columbia River Gorge. 
+
+To get there from Portland, we recommend taking the 
+[Historic Columbia River Highway](https://traveloregon.com/things-to-do/trip-ideas/scenic-drives/the-historic-columbia-river-highway/).
+
+[The Best Man's guide to the Gorge](https://www.google.com/maps/d/edit?mid=1su-1slKJws2VgFIflTcqSxu1q9stPGs&usp=sharing){.btn .btn-outline-success}
+
+### Are you staying a little bit longer?
+
+Are you a golfer? We aren't. But our more golfing-inclined friends love the [Bandon Dunes Golf Resort](https://bandondunesgolf.com/), which features breathtaking views of the Pacific. The drive from Hood River takes 4-5 hours and offers some gorgeous destinations along the way---don't miss the 10 waterfalls at [Silver Falls State Park](https://stateparks.oregon.gov/index.cfm?do=park.profile&parkId=151). You can also fly into Southwest Oregon Regional Airport (OTH) in North Bend, a 30 minute drive from Bandon, from either Denver or San Francisco.
+
+### Cities we love
+
+- Portland ([here's a map](https://www.google.com/maps/d/edit?mid=1xgbAGzbs6ozwT1QMEmUNndOzOYvz-ww&usp=sharing)) 
+    - Don't miss the [International Rose Test Garden](https://www.portland.gov/parks/washington-park-international-rose-test-garden) at Washington Park
+- Astoria (coastal, breweries, shipwreck in Fort Stevens State Park) 
+- Cannon Beach (Oregon Coast, Haystack Rock) 
+- Pacific City (Oregon Coast, Dunes, Pacific City Brewing, firepits on the beach) 
+- Bend (Central Oregon, high desert, amazing outdoor recreation, most breweries per capita in the US)
 
 <!-- Start with an interactive map of Oregon and SW Washington -->
 
 <!-- - Highlight Portland, Hood River, and the Gorge -->
+
 <!-- - Might be useful to have different layers for different interests -->
+
 <!--     - Hiking/sightseeing -->
+
 <!--     - Extreme sports -->
+
 <!--     - Golf -->
+
 <!--     - Beer -->
+
 <!--     - Wine -->
+
 <!-- - Portland needs its own set of maps for streets and restaurants -->
+
 <!--     - Show what's transit accessible -->
+
 <!-- - Historic Columbia River Highway map -->
+
 <!-- - Broader Gorge Hiking map? -->
+
 <!-- - Oregon bigger than New England map -->
-
-
 
 <!-- ### Portland -->
 
@@ -29,7 +58,9 @@ toc: true
 <!-- Washington Park -->
 
 <!-- - Rose Garden -->
+
 <!-- - Japanese Garden -->
+
 <!-- - The view from Pittock Mansion -->
 
 <!-- #### Hotels -->
@@ -45,7 +76,9 @@ toc: true
 <!-- Getting around -->
 
 <!-- - MAX -->
+
 <!-- - Streetcar -->
+
 <!-- - Bike -->
 
 <!-- The "quadrants"; the eastside/westside dichotomy -->
@@ -67,23 +100,26 @@ toc: true
 <!-- Downtown -->
 
 <!-- - Pioneer Square -->
+
 <!-- - Shopping -->
 
 <!-- Pearl district -->
 
 <!-- - Powell's -->
+
 <!-- - Shopping -->
 
 <!-- Washington Park and Forest Park -->
 
 <!-- - Rose Garden -->
+
 <!-- - Japanese Garden -->
+
 <!-- - The view from Pittock Mansion -->
 
 <!-- #### Rose Garden -->
 
 <!-- #### Japanese Garden -->
-
 
 <!-- #### Hikes -->
 
@@ -92,11 +128,13 @@ toc: true
 <!-- Barbeque -->
 
 <!-- - Eem -->
+
 <!-- - Matt's BBQ -->
 
 <!-- Thai -->
 
 <!-- - Eem -->
+
 <!-- - Langbaan -->
 
 <!-- Vietnamese -->
@@ -106,12 +144,15 @@ toc: true
 <!-- Japanese -->
 
 <!-- - Bamboo Sushi -->
+
 <!-- - Afuri -->
+
 <!-- - Tanaka -->
 
 <!-- New American -->
 
 <!-- - Sugarpine Drive-in -->
+
 <!-- - Edgefield -->
 
 <!-- Southern -->
@@ -121,23 +162,29 @@ toc: true
 <!-- Breakfast -->
 
 <!-- - Pine State Biscuits -->
+
 <!-- - Broder -->
 
 <!-- Pizza -->
 
 <!-- - Ken's Artisan Pizza -->
+
 <!-- - Apizza Scholls -->
 
 <!-- Steakhouses -->
 
 <!-- - RingSide -->
+
 <!-- - Ox -->
+
 <!-- - Laurelhurst Market -->
 
 <!-- Seafood -->
 
 <!-- - Jake's Crawfish -->
+
 <!-- - Normandie -->
+
 <!-- - Jacqueline's -->
 
 <!-- Slavic -->
@@ -151,14 +198,16 @@ toc: true
 <!-- Mexican -->
 
 <!-- - Lilia Comedor -->
+
 <!-- - Republica -->
+
 <!-- - Guero -->
+
 <!-- - Mole Mole -->
 
 <!-- Chinese -->
 
 <!-- - ??? -->
-
 
 <!-- ### Columbia River Gorge -->
 
@@ -181,8 +230,11 @@ toc: true
 <!-- Bend -->
 
 <!-- - Breweries -->
+
 <!--     - Crux -->
+
 <!--     - Monkless -->
+
 <!-- - Deschutes River -->
 
 <!-- South Sister -->
@@ -200,13 +252,11 @@ toc: true
 <!-- The University -->
 
 <!-- - PLC, where it all started -->
+
 <!-- - Hayward Field -->
-
-
 
 <!-- #### Willamette Valley -->
 
 <!-- Silver Falls -->
 
 <!-- Wine Country -->
-
